Configure JWT authentication and Spring Security infrastructure